fix text alignment

--- a/styles/PageHeader.module.css
+++ b/styles/PageHeader.module.css
@@ -13,6 +13,8 @@
   font-size: 40px;
   font-weight: 600;
   letter-spacing: -0.01em;
+
+  text-align: center;
 }
 
 .textContainer {
